compiler/tests/should-fail/UndefinedFunction.via
/* UndefinedNameError */

fun add10(a: int{alice}, b: out int{bob}) {
    out b = declassify (endorse a to {alice & bob<-} from {alice}) + 10 to {(alice|bob)-> & (alice&bob)<-};
}

fun main() {
    val array = Array[int]{alice}(10);
    val a: int{alice} = 0;
    add20(a, val b);
    output a to alice;
    output b to bob;
}

host alice
host bob
